--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<html lang="{{ app.request.locale }}">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}{{ 'navbar.home'|trans }}{% endblock %}</title>
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
+    {% block stylesheets %}{% endblock %}
+</head>
+<body class="d-flex flex-column min-vh-100">
+{% include 'navbar.html.twig' %}
+
+<div id="flash-data"
+     data-messages='[
+        {%- for label, messages in app.flashes -%}
+            {%- set type = (label == 'error') ? 'danger' : label %}
+            {%- for message in messages -%}
+                { "type": "{{ type }}", "message": "{{ message|e('js') }}" }{{ not loop.last or not loop.parent.loop.last ? ',' }}
+            {%- endfor -%}
+        {%- endfor -%}
+     ]'>
+</div>
+
+<div class="container mt-4 flex-grow-1">
+    {% block body %}
+    {% endblock %}
+</div>
+
+<footer class="bg-dark text-light text-center py-3 mt-auto">
+    <p class="mb-0">&copy; {{ "now"|date("Y") }} {{ 'footer.copyright'|trans }}</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="{{ asset('css/flash_messages.css') }}">
+
+<script src="{{ path('js_translations', { '_locale': app.request.locale }) }}"></script>
+<script src="{{ asset('js/flash_messages.js') }}"></script>
+<script src="{{ asset('js/flash_loader.js') }}"></script>
+<script src="{{ asset('js/delete.js') }}"></script>
+{% block javascripts %}{% endblock %}
+{% include 'partials/delete_modal.html.twig' %}
+</body>
 </html>
+
